--- a/template/template.html
+++ b/template/template.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Rreport for Performance Test</title>
+        <title>性能测试报告</title>
         <script src="js/Chart.js"></script>
         <link rel="stylesheet" type="text/css" href="css/github.css">
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
@@ -87,29 +87,6 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
-                            <div>
-                                <h2>SERVER INFO</h2>
-                                <div style="display:inline-block;width:33%;vertical-align:top;">
-                                    <h5>Platform Info</h5>                                    
-                                    <pre class="codehilite" style="white-space: pre-wrap">${platform_info_data}</pre>
-                                </div>                                                        
-                                <div style="display:inline-block;width:33%;vertical-align:top;">
-                                    <h5>General Info</h5>                                     
-                                    <pre class="codehilite" style="white-space: pre-wrap">${general_info_data}</pre>
-                                </div>                                                        
-                                <div style="display:inline-block;width:33%;vertical-align:top;">
-                                    <h5>Disk Info</h5>
-                                    <pre class="codehilite" style="white-space: pre-wrap">${disk_info_data}</pre>
-                                </div>
-                            </div>
-                            <div>
-                                <h2>SERVER PERFORMANCE:</h2>
-                                <pre class="codehilite">
-                                    ${cpu_chart_div}
-                                    ${mem_chart_div}
-                                    ${io_chart_div}
-                                </pre>
                             </div>
                         </div>
                     </div>
