--- a/template/template.html
+++ b/template/template.html
@@ -54,11 +54,11 @@
                                         <col width="10%" />
                                     </colgroup>
                                     <thead valign="bottom">
-                                        <tr><th class="head" rowspan="2">并发数</th>
-                                            <th class="head" rowspan="2">压力时间</th>
-                                            <th class="head" rowspan="2">吞吐率</th>
+                                        <tr><th class="head" rowspan="2">Concurrency</th>
+                                            <th class="head" rowspan="2">Duration</th>
+                                            <th class="head" rowspan="2">TPS</th>
                                             <th class="head" rowspan="2">RPS</th>
-                                            <th class="head" colspan="4">响应时间</th>
+                                            <th class="head" colspan="4">Latency</th>
                                             <th class="head" colspan="4">RPS</th>
                                         </tr>
                                         <tr><th class="head">avg</th>
